src/scss/pages/_cart.scss
.page-template-cart {
  .k-cart {
    &--item__price {
      position: relative;
    }
  }

  .k-header {
    top: 0 !important;

    &--top {
      display: none;
    }

    &--nav {
      display: none;
    }

    &--navtoggle {
      display: none;
    }

    &--logo {
      transform: scale(0.7);
    }
  }

  .k-cart {
    &__headline h1 {
      margin-top: 0;
    }
  }

  .k-ctabanner {
    display: none;
  }
}

